fix: update ProfileImage and Section components for improved styling; adjust scrollbar animation timing in globals.css

--- a/style/globals.css
+++ b/style/globals.css
@@ -138,7 +138,7 @@
   }
 }
 .animate-scrollbar{
-  animation: scrollBar 0.5s linear;
+  animation: scrollBar linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
 }
